# rag_demos

./: LICENSE  rag.py  readme.md
backpack/: Makefile  README.md  backpack.py  pyproject.toml
haystack/: pyproject.toml  rag.py
single_doc/: rag.py  rag_phi2_7_22_24.ipynb
